--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,17 @@ description = "Default template for PDM package"
 authors = [
     {name = "DE32/4th_Team", email = "elnath1002@naver.com"},
 ]
-dependencies = []
+dependencies = [
+    "kafka-python>=2.0.2",
+]
 requires-python = ">=3.8"
 readme = "README.md"
 license = {text = "MIT"}
 
 
+[project.optional-dependencies]
+test = [
+    "pytest>=8.3.2",
+]
 [tool.pdm]
 distribution = false
