--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ test = [
     "pytest>=8.3.2",
 ]
 [tool.pdm]
-distribution = false
+distribution = true
 
 [tool.pdm.scripts]
 BCS = "bcs.__main__:main"
