--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 dependencies = [
     "kafka-python>=2.0.2",
+    "schedule>=1.2.2",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
