--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 dependencies = [
     "kafka-python>=2.0.2",
+    "textual>=0.73.0",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
