--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "kafka-python>=2.0.2",
     "textual>=0.73.0",
+    "confluent-kafka>=2.5.0",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
